control-plane-operator/controllers/hostedcontrolplane/testdata/router-infra/AWS_PublicAndPrivate_KAS_LoadBalancer/zz_fixture_TestRouterInfrastructureWithStrategies_When_AWS_is_PublicAndPrivate_with_KAS_LoadBalancer_route_konnectivity_server.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
  labels:
    hypershift.openshift.io/hosted-control-plane: hcp-namespace
    hypershift.openshift.io/internal-route: "true"
  name: konnectivity-server
  namespace: hcp-namespace
  ownerReferences:
  - apiVersion: hypershift.openshift.io/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: HostedControlPlane
    name: hcp
    uid: ""
  resourceVersion: "1"
spec:
  host: konnectivity-server.apps.hcp.hypershift.local
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: konnectivity-server
    weight: null
status: {}
