control-plane-operator/controllers/hostedcontrolplane/testdata/router-infra/AWS_PublicAndPrivate_KAS_LoadBalancer/zz_fixture_TestRouterInfrastructureWithStrategies_When_AWS_is_PublicAndPrivate_with_KAS_LoadBalancer_service_private_router.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
  labels:
    app: private-router
  name: private-router
  namespace: hcp-namespace
  resourceVersion: "1"
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app: private-router
  type: LoadBalancer
status:
  loadBalancer: {}
